# Linea

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  matrix_basics.cpp  vector_basics.cpp
include/: Linea.hpp
include/Linea/Core/: Concepts.hpp  PlatformMacros.hpp  Types.hpp  Utilities.hpp
include/Linea/Decompositions/: Cholesky.hpp  HouseholderQR.hpp  LU.hpp  LUFactor.hpp  SVD.hpp
include/Linea/IO/: MatrixFormating.hpp  StreamOperations.hpp  VectorFormating.hpp
include/Linea/Matrix/: Matrix.hpp  MatrixMath.hpp  MatrixOperations.hpp  MatrixUtilities.hpp
include/Linea/Vector/: Vector.hpp  Vector3D.hpp  VectorMath.hpp  VectorOperations.hpp  VectroMath.hpp
include/matrix/: matrix.hpp
